--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,3 +124,10 @@
     @apply bg-background text-foreground;
   }
 }
+
+.line-clamp-6 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 6;
+}
