Quality of Life 2

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -131,3 +131,16 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 6;
 }
+
+@keyframes infinite-scroll {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-infinite-scroll {
+  animation: infinite-scroll 25s linear infinite; /* Adjust duration as needed */
+}
